# tui-1password

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: app.rs  app_config.rs  err.rs  lib.rs  main.rs  op.rs  terminal.rs  ui.rs  util.rs  utils.rs
tests/: integration_test.rs
tests/resources/: token-expired
