[package]
name = "tui-1password"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22"
# log = "0.4"
serde = "1.0.117"
serde_json = "1.0"
tracing = "0.1.3"
tracing-core = "0.1.21"
tracing-appender = "0.2.0"
tracing-subscriber = "0.3.8"
tui = { version = "0.16", features = ["crossterm"] }
